# cmake-import-export-test

./: .gitmodules  CMakeLists.txt  README.md  main.cc  newfunctions.cu  newfunctions.h  run.cu  run.h
.github/workflows/: autoTest.yml
tests/: CMakeLists.txt  test.cc
